[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IS623-ImageTools"
version = "1.0.0"
description = "A simple library for image processing and visualization for the IS623 - Computación Gráfica course at Universidad Tecnológica de Pereira (UTP), developed by Kevin Esguerra Cardona."
authors = [
    {name = "Kevin", email = "kevin.esguerra@utp.edu.co"}
]
readme = "README.md"
keywords = [
    "image", "processing", "visualization", "computational",
    "graphical", "computing", "computación", "gráfica", "computacional"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "matplotlib",
    "Pillow"
]
requires-python = ">=3.8"



